2008-04-08  Simon Goodall  <simon@worldforge.org>

	* python/Makefile.am, python/wfut-python.py: Added a sample python
	  implementation of the wfut command line tool.

2008-04-02  Simon Goodall  <simon@worldforge.org>

	* NEWS: 0.2.0 Released.

2008-03-27  Simon Goodall  <simon@worldforge.org>

	* python/WFUT.i: Create python equivalents for typedefs. Add
	  UpdateReason callback.

2008-03-27  Simon Goodall  <simon@worldforge.org>

	* Makefile.am: Add autogen.sh, libwfut.spec, libwfut.spec.in and
	  libwfut.dox as EXTRA_DIST files.

2008-03-25  Simon Goodall  <simon@worldforge.org>

	* Makefile.am, configure.ac, libwfut-0.1.pc.in, libwfut-0.2.pc.in,
	  libwfut/Makefile.am, python/Makefile.am, tools/Makefile.am: Update
	  version numbers to 0.2.0.

2008-03-25  Simon Goodall  <simon@worldforge.org>

	* libwfut/ChannelParser.cpp, libwfut/FileParser.cpp,
	  libwfut/MirrorParser.cpp: Fix parse error detection when parsing an
	  XML string.

2008-03-05  Simon Goodall  <simon@worldforge.org>

	* libwfut/platform.cpp: Change how execute perms are set to try and
	  avoid problems on some machine which end up with only execute perms.

2007-11-29  Simon Goodall  <simon@worldforge.org>

	* libwfut/platform.cpp, libwfut/platform.h: Added method to recursively 
	  scan a directory structure and add files to an input list. A list of
	  filenames (and dirnames) to exclude can also be passed in.

2007-11-27  Simon Goodall  <simon@worldforge.org>

	* libwfut/WFUT.cpp, libwfut/WFUT.h: Ignore FileObject's with the
	  deleted flag set to true and add an appropriate UpdateReason.

2007-11-27  Simon Goodall  <simon@worldforge.org>

	* libwfut/FileParser.cpp: Fix error in strncmp use.

2007-11-27  Simon Goodall  <simon@worldforge.org>

	* libwfut/types.h, libwfut/FileIO.h, libwfut/FileParser.cpp: Added a 
	  flag called deleted to indicate that the server side file no longer
	  exists and should be ignored for update purposes and potentially